* Wed Mar 06 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 7.8.1-0
- Update minimum version of inifile Puppet module to 2.5.0
- Fix dependency cycle in a full SIMP system that was introduced by
  the new autorequire of the parent directory of an INI file in the
  ini_setting type
- Expanded the upper limit of the concat and stdlib Puppet module versions
- Updated a URL in the README.md

* Wed Feb 20 2019 Nick Miller <nick.miller@onyxpoint.com> - 7.8.1-0
- Add management of $ssldir, $rundir, and /var/log/puppetserver

* Fri Jan 25 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.8.0-0
- Fixed issues with incron rules and the simp_generate_types calls.
  - This was mostly due to bugs in the newer version of incrond. However, this
    module is now extensively tested for safety but will only trigger type
    generation on environment creation or updates to the puppet binaries.
- Fix bug where some SSL settings could not be set for the puppet server
  `webserver` components.
- Added the following *advanced usage* parameters in case users need to set
  parameters that are not presently managed to work around future issues:
  - pupmod::master::server_webserver_options
  - pupmod::master::ca_webserver_options

* Tue Jan 22 2019 Brandon Riden <brandon.riden@onyxpoint.com> - 7.7.1-0
- Set pupmod::master::generate_types: enable => false by default to fix
  bug causing puppet servers to crash.
  - pupmod::master::extra_webserver_sections

* Thu Nov 15 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.7.0-0
- Fix warning about automatic data type munging in the puppet server sysconfig
  template
- Add workaround for Puppet 5 background exec issue to the generate_types exec

* Mon Oct 29 2018 Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.7.0-0
- Remove deprecated `[master] ca` setting when `ca = true` in Puppet 5.5.6+
- Remove `[master] ca` setting in Puppet 6+
- Update badges and contribution guide URL in README.md
