@@ -9,6 +9,7 @@ describe 'pupmod::master::sysconfig' do
       }}}
     end
 
+    puppetserver_content_without_jruby = File.read("#{File.dirname(__FILE__)}/data/puppetserver.txt")
     context "on #{os}" do
 
       ['PE', 'PC1'].each do |server_distribution|
@@ -27,11 +28,12 @@ describe 'pupmod::master::sysconfig' do
             %{ service{ #{puppetserver_svc}: } }
           }
 
-          let(:params){{
+          let(:default_params){{
             :server_distribution => server_distribution
           }}
 
           if server_distribution == 'PE'
+            let(:params) { default_params }
             let(:facts){
               @extras.merge(os_facts).merge(
                 :memorysize_mb => '490.16',
@@ -46,30 +48,94 @@ describe 'pupmod::master::sysconfig' do
               )
             end
           else
-            let(:facts){ @extras.merge(os_facts).merge(:memorysize_mb => '490.16') }
+            context 'on PC1 with default params' do
+              let(:params) { default_params }
+              let(:facts){ @extras.merge(os_facts).merge({
+                :memorysize_mb => '490.16',
+                :puppetserver_jruby => {
+                  'dir' => '/opt/puppetlabs/server/apps/puppetserver',
+                  'jarfiles' => ['x.jar','y.jar', 'jruby-9k.jar']
+                  }
+                 })
+              }
+              it do
+                puppetserver_content = File.read("#{File.dirname(__FILE__)}/data/puppetserver-j9.txt")
+                puppetserver_content.gsub!('%PUPPETSERVER_JAVA_TMPDIR_ROOT%',
+                  File.dirname(facts[:puppet_settings][:master][:server_datadir]))
 
-            it do
-              puppetserver_content = File.read("#{File.dirname(__FILE__)}/data/puppetserver.txt")
-              puppetserver_content.gsub!('%PUPPETSERVER_JAVA_TMPDIR_ROOT%',
-                File.dirname(facts[:puppet_settings][:master][:server_datadir]))
+                is_expected.to contain_file('/etc/sysconfig/puppetserver').with( {
+                  'owner'   => 'root',
+                  'group'   => 'puppet',
+                  'mode'    => '0640',
+                  'content' => puppetserver_content
+                } )
+              end
 
-              is_expected.to contain_file('/etc/sysconfig/puppetserver').with( {
-                'owner'   => 'root',
-                'group'   => 'puppet',
-                'mode'    => '0640',
-                'content' => puppetserver_content
-              } )
+              it { is_expected.to create_class('pupmod::master::sysconfig') }
+              it { is_expected.to contain_file("#{File.dirname(facts[:puppet_settings][:master][:server_datadir])}/pserver_tmp").with(
+                {
+                  'owner'  => 'puppet',
+                  'group'  => 'puppet',
+                  'ensure' => 'directory',
+                  'mode'   => '0750'
+                }
+              )}
+            end
+            context 'if jruby9k set to true but file does not exist' do
+              let(:params) { default_params }
+              let(:facts){ @extras.merge(os_facts).merge({
+                :memorysize_mb => '490.16',
+                :puppetserver_jruby => {
+                  'dir' => '/opt/puppetlabs/server/apps/puppetserver',
+                  'jarfiles' => ['x.jar','y.jar']
+                  }
+                })
+              }
+              it do
+                puppetserver_content_without_jruby.gsub!('%PUPPETSERVER_JAVA_TMPDIR_ROOT%',
+                  File.dirname(facts[:puppet_settings][:master][:server_datadir]))
+
+                is_expected.to contain_file('/etc/sysconfig/puppetserver').with( {
+                  'owner'   => 'root',
+                  'group'   => 'puppet',
+                  'mode'    => '0640',
+                  'content' => puppetserver_content_without_jruby
+                } )
+              end
             end
 
-            it { is_expected.to create_class('pupmod::master::sysconfig') }
-            it { is_expected.to contain_file("#{File.dirname(facts[:puppet_settings][:master][:server_datadir])}/pserver_tmp").with(
-              {
-                'owner'  => 'puppet',
-                'group'  => 'puppet',
-                'ensure' => 'directory',
-                'mode'   => '0750'
-              }
-            )}
+            context 'set jrubyjar set to default ' do
+              let(:params) { default_params.merge({:jruby_jar => 'default'}) }
+              let(:facts){ @extras.merge(os_facts).merge(:memorysize_mb => '490.16') }
+
+              it do
+                puppetserver_content_without_jruby.gsub!('%PUPPETSERVER_JAVA_TMPDIR_ROOT%',
+                  File.dirname(facts[:puppet_settings][:master][:server_datadir]))
+
+                is_expected.to contain_file('/etc/sysconfig/puppetserver').with( {
+                  'owner'   => 'root',
+                  'group'   => 'puppet',
+                  'mode'    => '0640',
+                  'content' => puppetserver_content_without_jruby
+                } )
+              end
+            end
+            context 'set jruby jar set and no fact ' do
+              let(:params) { default_params.merge({:jruby_jar => 'x.jar'}) }
+              let(:facts){ @extras.merge(os_facts).merge(:memorysize_mb => '490.16') }
+
+              it do
+                puppetserver_content_without_jruby.gsub!('%PUPPETSERVER_JAVA_TMPDIR_ROOT%',
+                  File.dirname(facts[:puppet_settings][:master][:server_datadir]))
+
+                is_expected.to contain_file('/etc/sysconfig/puppetserver').with( {
+                  'owner'   => 'root',
+                  'group'   => 'puppet',
+                  'mode'    => '0640',
+                  'content' => puppetserver_content_without_jruby
+                } )
+              end
+            end
           end
         end
       end
